--- a/Gitpilot/Components/Layout/GitpilotLayout.razor.css
+++ b/Gitpilot/Components/Layout/GitpilotLayout.razor.css
@@ -7,15 +7,15 @@
     position: absolute;
     width: 100%;
     height: 50px;
-    background-color: rgb(51, 55, 63);
+    background-color: var(--primary-color);
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 15px;
-    font-size:13px;
+    font-size: 13px;
 }
     .quick-access-bar button {
-        background-color: rgb(51, 55, 63);
+        background-color: var(--primary-color);
         color: white;
         border: none;
     }
@@ -23,7 +23,7 @@
     position: absolute;
     width: 400px;
     height: 100%;
-    background-color: rgb(39, 42, 49);
+    background-color: var(--secondary-color);
     left: 0px;
     padding-top: 50px;
     padding-left: 15px;
@@ -40,7 +40,19 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(28, 30, 35);
+    background-color: var(--background-color);
     padding-top: 50px;
     padding-left: 400px;
+}
+.plus-button{
+    font-size:24px;
+    font-weight:bold;
+}
+.dialog-container{
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction:column;
+    align-items:center;
+    padding: 10px;
 }
