--- a/Gitpilot/Components/SideBar/GitBranchExplorer.razor.css
+++ b/Gitpilot/Components/SideBar/GitBranchExplorer.razor.css
@@ -1,15 +1,14 @@
 ﻿.container {
     overflow: auto;
-    display: flex;
     flex-direction: column;
     min-height: 100px;
+    height: calc(100vh - 100px);
 }
 
 .section {
     overflow: auto;
     padding: 10px;
     border-radius: 5px;
-    max-height: 300px;
 }
 
 .draggable {
@@ -40,6 +39,6 @@
     text-overflow: ellipsis;
 }
 
-.folder.open + .branches {
-    display: block;
-}
+    .folder.open + .branches {
+        display: block;
+    }
