--- a/Gitpilot/wwwroot/css/app.css
+++ b/Gitpilot/wwwroot/css/app.css
@@ -3,6 +3,7 @@
     --secondary-color: rgb(39, 42, 49);
     --background-color: rgb(28, 30, 35);
     --secondary-color-hover: rgb(33, 41,57);
+    --primary-color-hover: rgb(61, 68, 82);
 }
 
 body {
@@ -30,3 +31,42 @@ body {
         background: #555;
     }
 
+
+.custom-dropdown {
+    position: relative;
+}
+
+.custom-dropdown-btn {
+    background-color: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+    .custom-dropdown-btn:hover{
+        background-color: var(--primary-color-hover);
+    }
+
+    .custom-dropdown-list {
+        display: none;
+        position: absolute;
+        background-color: var(--background-color);
+        border: 1px solid #ffffff33;
+        border-radius: 3px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: max-content;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+        .custom-dropdown-list li {
+            padding: 4px 10px;
+            cursor: pointer;
+            width: max-content;
+            transition: background-color 0.2s;
+        }
+
+        .custom-dropdown-list li:hover {
+            background-color: var(--primary-color);
+        }
