--- a/Gitpilot/Components/Layout/GitpilotLayout.razor
+++ b/Gitpilot/Components/Layout/GitpilotLayout.razor
@@ -42,6 +42,7 @@
             <div @onclick="HandleRepoFolderPickIng"><CustomButton>Open Repository</CustomButton></div>
         </div>
     </CustomDialog>
+    <LoadingOra />
     <ErrorBoxs />
 </div>
 
